--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
 	<string	name="app_name"	translatable="false">Task Manager</string>
 	<string	name="id_test"	translatable="false">TextTexttttt</string>
+    <string name="noname">неизвестный</string>
+	<string name="report_master">Отчитался:</string>
 </resources>
