--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -28,4 +28,5 @@
     <string name="button_in_progress">В работе</string>
     <string name="button_in_finished">Завершено</string>
     <string name="button_list_people">Люди</string>
+    <string name="button_my_profile">Профиль</string>
 </resources>
