--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
 	<string name="hint_phone">number without \'+\'</string>
 	<string name="button_check">Request the OTP</string>
 	<string name="label_acception">Enter the OTP:</string>
-	<string name="hint_otp">OTP</string>
+	<string name="hint_otp" translatable="false">OTP</string>
 	<string name="button_send">Send</string>
 	<string name="label_fio">Name:</string>
 	<string name="hint_fio">Name, Surname</string>
@@ -21,7 +21,7 @@
 	<string name="button_add_report">Add a new report</string>
 	<string name="hint_description">Task description</string>
 	<string name="label_start_task">Start date</string>
-	<string name="def_date">00.00.0000</string>
+	<string name="def_date" translatable="false">00.00.0000</string>
 	<string name="label_end_task">Finish date</string>
 	<string name="button_as_finished">Task is done</string>
 	<string name="button_as_new_task">Create this task</string>
