--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -35,7 +35,7 @@
     <string name="task_not_finished">Работа ещё не выполнена</string>
     <string name="task_finished">Работа принята</string>
     <string name="ad_title_remove_pict">Удалить картинку</string>
-    <string name="ad_message_remove_pict">Эта картирка будет удалена полностью из приложения.\\nВы уверены, что она вам больше не понадобится?</string>
-    <string name="ad_positive_button">Ok</string>
-    <string name="ad_negative_button">Cancel</string>
+    <string name="ad_message_remove_pict">Эта картирка будет удалена полностью из приложения.\nВы уверены, что она вам больше не понадобится?</string>
+    <string name="ad_positive_button">Да</string>
+    <string name="ad_negative_button">Отменить</string>
 </resources>
