--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -38,4 +38,8 @@
     <string name="ad_message_remove_pict">Эта картирка будет удалена полностью из приложения.\nВы уверены, что она вам больше не понадобится?</string>
     <string name="ad_positive_button">Да</string>
     <string name="ad_negative_button">Отменить</string>
+    <string name="head_total">Всего</string>
+    <string name="head_finished">Готово</string>
+    <string name="row_tasks">Заданий</string>
+    <string name="row_pay">Оплата</string>
 </resources>
